Updated website with new photos and 3 changes

--- a/about.html
+++ b/about.html
@@ -533,7 +533,7 @@
       <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
         <div class="team-member-card" data-bs-toggle="modal" data-bs-target="#teamModal2">
           <div class="member-photo-container">
-            <img src="https://images.unsplash.com/photo-1559839734-2b71ea197ec2?auto=format&fit=crop&w=300&q=80" alt="Dr. Uma S." class="member-photo">
+            <img src="images/uma.jpg" alt="Dr. Uma S." class="member-photo">
             <div class="member-overlay">
               <span class="view-profile">View Profile</span>
             </div>
@@ -621,7 +621,7 @@
       <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
         <div class="team-member-card" data-bs-toggle="modal" data-bs-target="#teamModal6">
           <div class="member-photo-container">
-            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?auto=format&fit=crop&w=300&q=80" alt="Dr. Aghor" class="member-photo">
+            <img src="images/Aghora.jpg" alt="Dr. Aghor" class="member-photo">
             <div class="member-overlay">
               <span class="view-profile">View Profile</span>
             </div>
@@ -665,7 +665,7 @@
       <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
         <div class="team-member-card" data-bs-toggle="modal" data-bs-target="#teamModal8">
           <div class="member-photo-container">
-            <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?auto=format&fit=crop&w=300&q=80" alt="Dr. Vijay Kumar Hallikeri" class="member-photo">
+            <img src="images/vijaykumarhalikere.jpeg" alt="Dr. Vijay Kumar Hallikeri" class="member-photo">
             <div class="member-overlay">
               <span class="view-profile">View Profile</span>
             </div>
@@ -782,7 +782,7 @@
                  </div>
                  <div class="carousel-inner">
                    <div class="carousel-item active">
-                     <img src="https://images.unsplash.com/photo-1559839734-2b71ea197ec2?auto=format&fit=crop&w=400&q=80" class="d-block w-100 team-photo-carousel" alt="Dr. Uma S. - Professional Photo">
+                     <img src="images/uma.jpg" class="d-block w-100 team-photo-carousel" alt="Dr. Uma S. - Professional Photo">
                    </div>
                    <div class="carousel-item">
                      <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?auto=format&fit=crop&w=400&q=80" class="d-block w-100 team-photo-carousel" alt="Dr. Uma S. - Laboratory Work">
@@ -814,6 +814,11 @@
                <p>With a strong academic background and decades of applied research, Dr. Uma bridges science and field application, enabling farmers and agri-preneurs to adopt sustainable biotech solutions that boost yields and income.</p>
                <h6>👉 Consult Dr. Uma S. for:</h6>
                <ul>
+                <li>Setting up tissue culture labs or satellite nurseries</li>
+                <li>Banana crop management and disease resistance strategies</li>
+                <li>Product innovation from banana biomass (peel, pseudostem, fiber)</li>
+                <li>Export-oriented value chain development</li>
+
                  <li>Laboratory setup for tissue culture</li>
                  <li>Protocol development for new plant varieties</li>
                  <li>Bioreactor system design and optimization</li>
@@ -1061,7 +1066,7 @@
                  </div>
                  <div class="carousel-inner">
                    <div class="carousel-item active">
-                     <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?auto=format&fit=crop&w=400&q=80" class="d-block w-100 team-photo-carousel" alt="Dr. Aghor - Professional Photo">
+                     <img src="images/Aghora.jpg" class="d-block w-100 team-photo-carousel" alt="Dr. Aghor - Professional Photo">
                    </div>
                    <div class="carousel-item">
                      <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?auto=format&fit=crop&w=400&q=80" class="d-block w-100 team-photo-carousel" alt="Dr. Aghor - Vegetable Research">
@@ -1199,7 +1204,7 @@
                  </div>
                  <div class="carousel-inner">
                    <div class="carousel-item active">
-                     <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?auto=format&fit=crop&w=400&q=80" class="d-block w-100 team-photo-carousel" alt="Dr. Vijay Kumar Hallikeri - Professional Photo">
+                     <img src="images/vijaykumarhalikere.jpeg" class="d-block w-100 team-photo-carousel" alt="Dr. Vijay Kumar Hallikeri - Professional Photo">
                    </div>
                    <div class="carousel-item">
                      <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?auto=format&fit=crop&w=400&q=80" class="d-block w-100 team-photo-carousel" alt="Dr. Vijay Kumar Hallikeri - Coconut Research">
