--- a/index.html
+++ b/index.html
@@ -2,8 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Horticulture Consultancy | Home</title>
+  <title>Horticulture Consultancy | Home - HortiConsult</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Professional horticulture consultancy services for urban gardeners, farmers, and agripreneurs. Expert guidance in hydroponics, polyhouse cultivation, and organic farming.">
+  <meta name="keywords" content="horticulture consultancy, urban gardening, hydroponics, polyhouse, organic farming, agricultural consulting, terrace gardening">
+  <meta name="author" content="HortiConsult">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://your-site-name.netlify.app/">
+  <meta property="og:title" content="Horticulture Consultancy | Home - HortiConsult">
+  <meta property="og:description" content="Professional horticulture consultancy services for urban gardeners, farmers, and agripreneurs. Expert guidance in hydroponics, polyhouse cultivation, and organic farming.">
+  <meta property="og:image" content="https://your-site-name.netlify.app/organic-farming-vegetables-fruits.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://your-site-name.netlify.app/">
+  <meta property="twitter:title" content="Horticulture Consultancy | Home - HortiConsult">
+  <meta property="twitter:description" content="Professional horticulture consultancy services for urban gardeners, farmers, and agripreneurs. Expert guidance in hydroponics, polyhouse cultivation, and organic farming.">
+  <meta property="twitter:image" content="https://your-site-name.netlify.app/organic-farming-vegetables-fruits.jpg">
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link href="style.css" rel="stylesheet">
   <!-- Use Bootstrap for styling -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -110,120 +130,7 @@
     </div>
   </section>
 
-  <!-- Services Section: Alternating Image/Text Cards -->
-  <section class="container py-5">
-    <h2 class="section-title text-center mb-5">Our Services</h2>
-    <!-- Service 1: Terrace Gardening -->
-    <div class="row align-items-center mb-5">
-      <div class="col-lg-6 mb-3 mb-lg-0">
-        <img src="https://images.unsplash.com/photo-1501004318641-b39e6451bec6?auto=format&fit=crop&w=800&q=80" alt="Terrace Gardening" class="img-fluid service-img shadow">
-      </div>
-      <div class="col-lg-6">
-        <h3>Terrace Gardening</h3>
-        <p>Create lush rooftop gardens with our expert design, plant selection, soil management, and ongoing care. We help you transform unused terraces into productive, beautiful green spaces for relaxation and food production.</p>
-      </div>
-    </div>
-    <!-- Service 2: Vertical Gardening -->
-    <div class="row align-items-center mb-5 flex-lg-row-reverse">
-      <div class="col-lg-6 mb-3 mb-lg-0">
-        <img src="https://images.unsplash.com/photo-1707586387441-c6657a1dfeae?auto=format&fit=crop&w=800&q=80" alt="Vertical Gardening" class="img-fluid service-img shadow">
-      </div>
-      <div class="col-lg-6">
-        <h3>Vertical Gardening</h3>
-        <p>Maximize your space with innovative vertical garden systems for balconies, walls, and small yards. We design, install, and maintain vertical gardens that are both functional and visually stunning.</p>
-      </div>
-    </div>
-    <!-- Service 3: Hydroponics -->
-    <div class="row align-items-center mb-5">
-      <div class="col-lg-6 mb-3 mb-lg-0">
-        <img src="https://images.unsplash.com/photo-1502741338009-cac2772e18bc?auto=format&fit=crop&w=800&q=80" alt="Hydroponics" class="img-fluid service-img shadow">
-      </div>
-      <div class="col-lg-6">
-        <h3>Hydroponics (Soil-less Farming)</h3>
-        <p>Grow plants in nutrient-rich water channels for faster growth and higher yields. We provide complete hydroponic solutions for homes and commercial setups, including system design, installation, and training.</p>
-      </div>
-    </div>
-    <!-- Service 4: Orchard Development -->
-    <div class="row align-items-center mb-5 flex-lg-row-reverse">
-      <div class="col-lg-6 mb-3 mb-lg-0">
-        <img src="https://images.unsplash.com/photo-1511690743698-d9d85f2fbf38?auto=format&fit=crop&w=800&q=80" alt="Orchard Development" class="img-fluid service-img shadow">
-      </div>
-      <div class="col-lg-6">
-        <h3>Orchard Development</h3>
-        <p>From land assessment to planting and management, we help you establish productive orchards for fruits and nuts. Our services include crop selection, layout planning, and sustainable orchard care.</p>
-      </div>
-    </div>
-    <!-- Service 5: Polyhouse Cultivation -->
-    <div class="row align-items-center mb-5">
-      <div class="col-lg-6 mb-3 mb-lg-0">
-        <img src="https://images.unsplash.com/photo-1465101178521-c1a9136a3fd9?auto=format&fit=crop&w=800&q=80" alt="Polyhouse Cultivation" class="img-fluid service-img shadow">
-      </div>
-      <div class="col-lg-6">
-        <h3>Polyhouse Cultivation</h3>
-        <p>Set up and manage polyhouses (greenhouse tunnels) for year-round, high-value crop production. We offer design, construction, crop planning, and climate control solutions for flowers and vegetables.</p>
-      </div>
-    </div>
-    <!-- Service 6: Organic Cultivation -->
-    <div class="row align-items-center mb-5 flex-lg-row-reverse">
-      <div class="col-lg-6 mb-3 mb-lg-0">
-        <img src="https://images.unsplash.com/photo-1509228468518-180dd4864904?auto=format&fit=crop&w=800&q=80" alt="Organic Cultivation" class="img-fluid service-img shadow">
-      </div>
-      <div class="col-lg-6">
-        <h3>Organic Cultivation</h3>
-        <p>Adopt organic farming practices for fruits, vegetables, flowers, and medicinal crops. We guide you on certification, soil health, pest management, and organic input sourcing for healthy, chemical-free produce.</p>
-      </div>
-    </div>
-    <!-- Service 7: Crop Planning -->
-    <div class="row align-items-center mb-5">
-      <div class="col-lg-6 mb-3 mb-lg-0">
-        <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=800&q=80" alt="Crop Planning" class="img-fluid service-img shadow">
-      </div>
-      <div class="col-lg-6">
-        <h3>Crop Planning</h3>
-        <p>Maximize your yield and profitability with scientific crop planning. We analyze your land, climate, and goals to recommend the best crop rotations, planting schedules, and resource management strategies.</p>
-      </div>
-    </div>
-    <!-- Service 8: Pest & Disease Management -->
-    <div class="row align-items-center mb-5 flex-lg-row-reverse">
-      <div class="col-lg-6 mb-3 mb-lg-0">
-        <img src="https://images.unsplash.com/photo-1506784983877-45594efa4cbe?auto=format&fit=crop&w=800&q=80" alt="Pest and Disease Management" class="img-fluid service-img shadow">
-      </div>
-      <div class="col-lg-6">
-        <h3>Pest & Disease Management</h3>
-        <p>Protect your crops with integrated pest and disease management solutions. We offer diagnosis, prevention, and eco-friendly treatment plans for healthy, resilient plants.</p>
-      </div>
-    </div>
-    <!-- Service 9: Irrigation & Fertigation Systems -->
-    <div class="row align-items-center mb-5">
-      <div class="col-lg-6 mb-3 mb-lg-0">
-        <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=800&q=80" alt="Irrigation and Fertigation Systems" class="img-fluid service-img shadow">
-      </div>
-      <div class="col-lg-6">
-        <h3>Irrigation & Fertigation Systems</h3>
-        <p>Design and implement efficient irrigation and fertigation systems for optimal water and nutrient delivery. We provide drip, sprinkler, and automated solutions tailored to your needs.</p>
-      </div>
-    </div>
-    <!-- Service 10: Market Intelligence -->
-    <div class="row align-items-center mb-5 flex-lg-row-reverse">
-      <div class="col-lg-6 mb-3 mb-lg-0">
-        <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=800&q=80" alt="Market Intelligence" class="img-fluid service-img shadow">
-      </div>
-      <div class="col-lg-6">
-        <h3>Market Intelligence</h3>
-        <p>Stay ahead with market analysis, price forecasting, and demand trends. We help you make informed decisions for better profitability and risk management.</p>
-      </div>
-    </div>
-    <!-- Service 11: Export/Import Advisory -->
-    <div class="row align-items-center mb-5">
-      <div class="col-lg-6 mb-3 mb-lg-0">
-        <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=800&q=80" alt="Export/Import Advisory" class="img-fluid service-img shadow">
-      </div>
-      <div class="col-lg-6">
-        <h3>✨ Bridging Innovation to the Field</h3>
-        <p>We act as facilitators, bringing cutting-edge technologies and solutions from ICAR and other leading government organizations directly to farmers, growers, and agribusinesses.</p>
-      </div>
-    </div>
-  </section>
+  
 
   <!-- Client Types Section -->
   <section class="container py-5">
