--- a/services.html
+++ b/services.html
@@ -2,8 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Services | Horticulture Consultancy</title>
+  <title>Our Services | Horticulture Consultancy - HortiConsult</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Comprehensive horticulture services including hydroponics, polyhouse cultivation, organic farming, terrace gardening, and agricultural consulting for all scales.">
+  <meta name="keywords" content="horticulture services, hydroponics, polyhouse, organic farming, terrace gardening, agricultural consulting, crop planning">
+  <meta name="author" content="HortiConsult">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://your-site-name.netlify.app/services.html">
+  <meta property="og:title" content="Our Services | Horticulture Consultancy - HortiConsult">
+  <meta property="og:description" content="Comprehensive horticulture services including hydroponics, polyhouse cultivation, organic farming, terrace gardening, and agricultural consulting for all scales.">
+  <meta property="og:image" content="https://your-site-name.netlify.app/organic-farming-vegetables-fruits.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://your-site-name.netlify.app/services.html">
+  <meta property="twitter:title" content="Our Services | Horticulture Consultancy - HortiConsult">
+  <meta property="twitter:description" content="Comprehensive horticulture services including hydroponics, polyhouse cultivation, organic farming, terrace gardening, and agricultural consulting for all scales.">
+  <meta property="twitter:image" content="https://your-site-name.netlify.app/organic-farming-vegetables-fruits.jpg">
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link href="style.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/lucide-static@0.321.0/font/lucide.css">
