--- a/about.html
+++ b/about.html
@@ -2,8 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>About | Horticulture Consultancy</title>
+  <title>About Us | Horticulture Consultancy - HortiConsult</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Learn about our expert horticulture team with international experience in South Korea, Japan, and India. Science-driven solutions for all your agricultural needs.">
+  <meta name="keywords" content="about horticulture consultancy, expert team, agricultural scientists, international experience, horticulture experts">
+  <meta name="author" content="HortiConsult">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://your-site-name.netlify.app/about.html">
+  <meta property="og:title" content="About Us | Horticulture Consultancy - HortiConsult">
+  <meta property="og:description" content="Learn about our expert horticulture team with international experience in South Korea, Japan, and India. Science-driven solutions for all your agricultural needs.">
+  <meta property="og:image" content="https://your-site-name.netlify.app/organic-farming-vegetables-fruits.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://your-site-name.netlify.app/about.html">
+  <meta property="twitter:title" content="About Us | Horticulture Consultancy - HortiConsult">
+  <meta property="twitter:description" content="Learn about our expert horticulture team with international experience in South Korea, Japan, and India. Science-driven solutions for all your agricultural needs.">
+  <meta property="twitter:image" content="https://your-site-name.netlify.app/organic-farming-vegetables-fruits.jpg">
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link href="style.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
