--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Contact | Horticulture Consultancy</title>
+  <title>Contact Us | Horticulture Consultancy - HortiConsult</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Get in touch with our horticulture experts for consultation, services, and support. Book in-person or video consultations for all your agricultural needs.">
+  <meta name="keywords" content="contact horticulture consultancy, book consultation, agricultural experts, gardening support, farming advice">
+  <meta name="author" content="HortiConsult">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://your-site-name.netlify.app/contact.html">
+  <meta property="og:title" content="Contact Us | Horticulture Consultancy - HortiConsult">
+  <meta property="og:description" content="Get in touch with our horticulture experts for consultation, services, and support. Book in-person or video consultations for all your agricultural needs.">
+  <meta property="og:image" content="https://your-site-name.netlify.app/organic-farming-vegetables-fruits.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://your-site-name.netlify.app/contact.html">
+  <meta property="twitter:title" content="Contact Us | Horticulture Consultancy - HortiConsult">
+  <meta property="twitter:description" content="Get in touch with our horticulture experts for consultation, services, and support. Book in-person or video consultations for all your agricultural needs.">
+  <meta property="twitter:image" content="https://your-site-name.netlify.app/organic-farming-vegetables-fruits.jpg">
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link href="style.css" rel="stylesheet">
   <!-- Use Bootstrap for styling -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
