--- a/products.html
+++ b/products.html
@@ -2,8 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Horticulture Products | Premium Growing Essentials</title>
+  <title>Horticulture Products | Premium Growing Essentials - HortiConsult</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Premium horticulture products including seeds, cocopeat, grow bags, fertigation systems, and all essentials for successful gardening and farming.">
+  <meta name="keywords" content="horticulture products, seeds, cocopeat, grow bags, fertigation systems, gardening supplies, farming equipment">
+  <meta name="author" content="HortiConsult">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://your-site-name.netlify.app/products.html">
+  <meta property="og:title" content="Horticulture Products | Premium Growing Essentials - HortiConsult">
+  <meta property="og:description" content="Premium horticulture products including seeds, cocopeat, grow bags, fertigation systems, and all essentials for successful gardening and farming.">
+  <meta property="og:image" content="https://your-site-name.netlify.app/organic-farming-vegetables-fruits.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://your-site-name.netlify.app/products.html">
+  <meta property="twitter:title" content="Horticulture Products | Premium Growing Essentials - HortiConsult">
+  <meta property="twitter:description" content="Premium horticulture products including seeds, cocopeat, grow bags, fertigation systems, and all essentials for successful gardening and farming.">
+  <meta property="twitter:image" content="https://your-site-name.netlify.app/organic-farming-vegetables-fruits.jpg">
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link href="style.css" rel="stylesheet">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
