--- a/index.html
+++ b/index.html
@@ -2,28 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Horticulture Consultancy | Home - HortiConsult</title>
+  <title>Horticulture Consultancy | Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Professional horticulture consultancy services for urban gardeners, farmers, and agripreneurs. Expert guidance in hydroponics, polyhouse cultivation, and organic farming.">
-  <meta name="keywords" content="horticulture consultancy, urban gardening, hydroponics, polyhouse, organic farming, agricultural consulting, terrace gardening">
-  <meta name="author" content="HortiConsult">
-  
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://your-site-name.netlify.app/">
-  <meta property="og:title" content="Horticulture Consultancy | Home - HortiConsult">
-  <meta property="og:description" content="Professional horticulture consultancy services for urban gardeners, farmers, and agripreneurs. Expert guidance in hydroponics, polyhouse cultivation, and organic farming.">
-  <meta property="og:image" content="https://your-site-name.netlify.app/organic-farming-vegetables-fruits.jpg">
-
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://your-site-name.netlify.app/">
-  <meta property="twitter:title" content="Horticulture Consultancy | Home - HortiConsult">
-  <meta property="twitter:description" content="Professional horticulture consultancy services for urban gardeners, farmers, and agripreneurs. Expert guidance in hydroponics, polyhouse cultivation, and organic farming.">
-  <meta property="twitter:image" content="https://your-site-name.netlify.app/organic-farming-vegetables-fruits.jpg">
-  
-  <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link href="style.css" rel="stylesheet">
   <!-- Use Bootstrap for styling -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -81,7 +61,7 @@
     <div class="container hero-content text-center">
       <h1 class="display-4 fw-bold" id="hero-title">Grow with the Experts</h1>
       <p class="lead" id="hero-lead">Professional Horticulture Consultancy for Urban Gardeners, Farmers, and Agripreneurs</p>
-      <a href="#consultation" class="btn btn-lg btn-success mt-3" id="hero-cta">Book a Consultation</a>
+      <a href="booking.html" class="btn btn-lg btn-success mt-3" id="hero-cta">Book a Consultation</a>
     </div>
   </section>
 
@@ -130,7 +110,6 @@
     </div>
   </section>
 
-  
 
   <!-- Client Types Section -->
   <section class="container py-5">
@@ -164,14 +143,7 @@
           <div class="mb-2" style="font-size:2rem;">📍</div>
           <h5>In-Person Consultation</h5>
           <p>Available based on your location. Get hands-on, site-specific advice and planning.</p>
-          <a href="contact.html" class="btn btn-success consult-btn">Book Now</a>
-        </div>
-        <div class="col-md-5 text-center">
-          <div class="mb-2" style="font-size:2rem;">📹</div>
-          <h5>Video Consultation (Paid)</h5>
-          <p>Connect with our experts from anywhere. Get personalized guidance via video call.</p>
-          <a href="contact.html" class="btn btn-primary consult-btn">Book Now</a>
-          <a href="contact.html" class="btn btn-warning consult-btn">Pay Now</a>
+          <a href="booking.html" class="btn btn-success consult-btn">Book Now</a>
         </div>
       </div>
     </div>
@@ -183,19 +155,19 @@
     <div class="row g-4 justify-content-center">
       <div class="col-md-4">
         <div class="card p-3 h-100">
-          <div class="testimonial-quote mb-2">“Thanks to HortiConsult, my terrace is now a lush, productive garden. The team’s advice was spot on!”</div>
+          <div class="testimonial-quote mb-2">"Thanks to HortiConsult, my terrace is now a lush, productive garden. The team's advice was spot on!"</div>
           <div class="text-end">— Priya S., Bengaluru</div>
         </div>
-      </div>
+          </div>
       <div class="col-md-4">
         <div class="card p-3 h-100">
-          <div class="testimonial-quote mb-2">“Our polyhouse yields have doubled. The scientific approach and support are unmatched.”</div>
+          <div class="testimonial-quote mb-2">"Our polyhouse yields have doubled. The scientific approach and support are unmatched."</div>
           <div class="text-end">— Ramesh K., Farmer</div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card p-3 h-100">
-          <div class="testimonial-quote mb-2">“The export advisory helped us break into new markets. Highly recommended!”</div>
+          <div class="testimonial-quote mb-2">"The export advisory helped us break into new markets. Highly recommended!"</div>
           <div class="text-end">— GreenLeaf Exports</div>
         </div>
       </div>
@@ -213,14 +185,14 @@
             <h5>Urban Terrace Transformation</h5>
             <p>From concrete to green oasis in 3 months.</p>
           </div>
-        </div>
+              </div>
         <div class="carousel-item">
           <img src="https://images.unsplash.com/photo-1511690743698-d9d85f2fbf38?auto=format&fit=crop&w=900&q=80" class="d-block w-100 carousel-img" alt="Project 2">
           <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
             <h5>Polyhouse Success</h5>
             <p>Year-round flower production for a local entrepreneur.</p>
-          </div>
-        </div>
+              </div>
+            </div>
         <div class="carousel-item">
           <img src="https://images.unsplash.com/photo-1502741338009-cac2772e18bc?auto=format&fit=crop&w=900&q=80" class="d-block w-100 carousel-img" alt="Project 3">
           <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
@@ -263,4 +235,4 @@
     });
   </script>
 </body>
-</html> 
+</html>
