--- a/products.html
+++ b/products.html
@@ -461,6 +461,32 @@
   <section class="container" id="products">
     <h2 class="text-center mb-5" style="font-weight: 700; color: var(--text-dark);">Premium Horticulture Products</h2>
     
+    <!-- IIHR Information Banner -->
+    <div class="row mb-5">
+      <div class="col-12">
+        <div class="alert alert-success border-0 shadow-sm" style="background: linear-gradient(135deg, #e8f5e8 0%, #c8e6c9 100%);">
+          <div class="row align-items-center">
+            <div class="col-md-8">
+              <h4 class="alert-heading mb-2" style="color: var(--primary-green);">
+                <i class="fas fa-seedling me-2"></i>Premium Seeds Available
+              </h4>
+              <p class="mb-2" style="color: var(--text-dark);">
+                <strong>Products are available from Indian Institute of Horticultural Sciences, Bengaluru</strong>
+              </p>
+              <p class="mb-0" style="color: var(--text-light);">
+                High-quality, research-backed seeds with excellent germination rates and disease resistance.
+              </p>
+            </div>
+            <div class="col-md-4 text-md-end">
+              <a href="https://seed.iihr.res.in/" target="_blank" class="btn btn-success btn-lg">
+                <i class="fas fa-external-link-alt me-2"></i>Visit IIHR Portal
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
     <div class="row" id="productsContainer">
       <!-- Seeds -->
       <div class="col-lg-4 col-md-6 product-item" data-category="seeds">
@@ -472,10 +498,10 @@
           <div class="product-specs">
             <strong>Specs:</strong> 10 varieties, 100% germination rate, organic certified
           </div>
-          <div class="product-price">₹299 <span class="price-unit">/pack</span></div>
-          <button class="add-to-cart-btn" onclick="addToCart('Vegetable Seeds Pack', 299)">
-            <i class="fas fa-shopping-cart me-2"></i>Add to Cart
-          </button>
+          <div class="product-price">Available at IIHR Portal</div>
+          <a href="https://seed.iihr.res.in/" target="_blank" class="btn btn-success w-100">
+            <i class="fas fa-external-link-alt me-2"></i>Buy from IIHR Portal
+          </a>
         </div>
       </div>
 
@@ -488,10 +514,10 @@
           <div class="product-specs">
             <strong>Specs:</strong> 15 varieties, hybrid seeds, vibrant colors
           </div>
-          <div class="product-price">₹399 <span class="price-unit">/collection</span></div>
-          <button class="add-to-cart-btn" onclick="addToCart('Flower Seeds Collection', 399)">
-            <i class="fas fa-shopping-cart me-2"></i>Add to Cart
-          </button>
+          <div class="product-price">Available at IIHR Portal</div>
+          <a href="https://seed.iihr.res.in/" target="_blank" class="btn btn-success w-100">
+            <i class="fas fa-external-link-alt me-2"></i>Buy from IIHR Portal
+          </a>
         </div>
       </div>
 
