--- a/services.html
+++ b/services.html
@@ -112,7 +112,8 @@
         </div>
         <div class="modal-body" id="serviceModalBody"></div>
         <div class="modal-footer">
-          <a href="contact.html" class="btn btn-success">Contact Us</a>
+          <a href="booking.html" class="btn btn-success">Book Consultation - ₹499</a>
+          <a href="contact.html" class="btn btn-outline-secondary">Contact Us</a>
         </div>
       </div>
     </div>
