--- a/index.html
+++ b/index.html
@@ -180,24 +180,31 @@
     <div id="successCarousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=900&q=80" class="d-block w-100 carousel-img" alt="Project 1">
+          <img src="images/1.jpg" class="d-block w-100 carousel-img" alt="Success Story 1">
           <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
             <h5>Urban Terrace Transformation</h5>
             <p>From concrete to green oasis in 3 months.</p>
           </div>
               </div>
         <div class="carousel-item">
-          <img src="https://images.unsplash.com/photo-1511690743698-d9d85f2fbf38?auto=format&fit=crop&w=900&q=80" class="d-block w-100 carousel-img" alt="Project 2">
+          <img src="images/2.jpg" class="d-block w-100 carousel-img" alt="Success Story 2">
           <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
             <h5>Polyhouse Success</h5>
             <p>Year-round flower production for a local entrepreneur.</p>
               </div>
             </div>
         <div class="carousel-item">
-          <img src="https://images.unsplash.com/photo-1502741338009-cac2772e18bc?auto=format&fit=crop&w=900&q=80" class="d-block w-100 carousel-img" alt="Project 3">
+          <img src="images/3.jpg" class="d-block w-100 carousel-img" alt="Success Story 3">
           <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
             <h5>Hydroponics for Schools</h5>
             <p>Hands-on learning and fresh produce for students.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/4.jpg" class="d-block w-100 carousel-img" alt="Success Story 4">
+          <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
+            <h5>Community Garden Uplift</h5>
+            <p>Neighbors collaborating to grow healthy food together.</p>
           </div>
         </div>
       </div>
