Update team photos and payment system - Added Dr. Meera Pandey, Mr. Naveen, Dr. Y.T.N. Reddy, Dr. Yogesha, and Mr. Bharath photos - Updated payment phone number to 9902544449 for WhatsApp - Added new YouTube video to videos.html - Improved CSS styling for team member photos

--- a/videos.html
+++ b/videos.html
@@ -259,6 +259,36 @@
         </div>
       </div>
       
+      <!-- Third Row of Videos -->
+      <div class="row g-4 mb-4">
+        <div class="col-lg-6">
+          <div class="video-card p-3">
+            <h5>🌾 Latest Horticulture Video</h5>
+            <div class="ratio ratio-16x9">
+              <iframe 
+                src="https://www.youtube.com/embed/4Hji_ZCtG54" 
+                title="Latest Horticulture Video" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                allowfullscreen>
+              </iframe>
+            </div>
+            <p class="mt-2 text-muted small">Watch our latest educational content covering modern horticulture techniques and expert insights.</p>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="video-card p-3">
+            <h5>🚀 More Videos Coming Soon!</h5>
+            <div class="coming-soon d-flex align-items-center justify-content-center" style="height: 100%; min-height: 200px;">
+              <div>
+                <h6 style="color: #388e3c; margin-bottom: 1rem;">Stay Tuned!</h6>
+                <p class="mb-0 small">We're constantly creating new educational content. Subscribe to our channel to stay updated with the latest horticulture tips, tutorials, and expert insights.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
       <!-- Coming Soon Section -->
       <div class="coming-soon">
         <h5>🚀 More Videos Coming Soon!</h5>
